# STC-for-BWT-FamilyText-Compression

./: AUTHORS  CHANGES  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES  dcv5.cpp
docs/: ENGINEERING_CHECKLIST.md  LOW_MEMORY_VALIDATION.md  RELEASE_PROCESS.md  verification_summary_v283.json
docs/reports/: digit_context_v5_enwik8_report.md  digit_context_v5_submission_dossier_v240.md
